python/rregadmin/util/ustring_list_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.ustring_wrapper -r ^ustring_list_?$ -r ^ustrlist_.* -o ustring_list_wrapper.py ustring_list_wrapper.xml'
from ctypes import *

_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_wrapper import ustring
from rregadmin.util.ustring_wrapper import gboolean


# ../../../rregadmin/util/ustring_list.h 38
class ustring_list_(Structure):
    pass
ustring_list = ustring_list_
ustring_list_._fields_ = [
    # ../../../rregadmin/util/ustring_list.h 38
]
# ../../../rregadmin/util/ustring_list.h 44
ustrlist_new = _libraries['librregadmin.so.1'].ustrlist_new
ustrlist_new.restype = POINTER(ustring_list)
# ustrlist_new()
ustrlist_new.argtypes = []
ustrlist_new.__doc__ = \
"""ustring_list * ustrlist_new()
../../../rregadmin/util/ustring_list.h:44"""
# ../../../rregadmin/util/ustring_list.h 53
ustrlist_new_list = _libraries['librregadmin.so.1'].ustrlist_new_list
ustrlist_new_list.restype = POINTER(ustring_list)
# ustrlist_new_list(in_str)
ustrlist_new_list.argtypes = [POINTER(ustring)]
ustrlist_new_list.__doc__ = \
"""ustring_list * ustrlist_new_list(ustring * in_str)
../../../rregadmin/util/ustring_list.h:53"""
# ../../../rregadmin/util/ustring_list.h 60
ustrlist_copy = _libraries['librregadmin.so.1'].ustrlist_copy
ustrlist_copy.restype = POINTER(ustring_list)
# ustrlist_copy(in_ul)
ustrlist_copy.argtypes = [POINTER(ustring_list)]
ustrlist_copy.__doc__ = \
"""ustring_list * ustrlist_copy(unknown * in_ul)
../../../rregadmin/util/ustring_list.h:60"""
# ../../../rregadmin/util/ustring_list.h 66
ustrlist_is_valid = _libraries['librregadmin.so.1'].ustrlist_is_valid
ustrlist_is_valid.restype = gboolean
# ustrlist_is_valid(in_ul)
ustrlist_is_valid.argtypes = [POINTER(ustring_list)]
ustrlist_is_valid.__doc__ = \
"""gboolean ustrlist_is_valid(unknown * in_ul)
../../../rregadmin/util/ustring_list.h:66"""
# ../../../rregadmin/util/ustring_list.h 72
ustrlist_free = _libraries['librregadmin.so.1'].ustrlist_free
ustrlist_free.restype = gboolean
# ustrlist_free(in_ul)
ustrlist_free.argtypes = [POINTER(ustring_list)]
ustrlist_free.__doc__ = \
"""gboolean ustrlist_free(ustring_list * in_ul)
../../../rregadmin/util/ustring_list.h:72"""
# ../../../rregadmin/util/ustring_list.h 78
ustrlist_clear = _libraries['librregadmin.so.1'].ustrlist_clear
ustrlist_clear.restype = gboolean
# ustrlist_clear(in_ul)
ustrlist_clear.argtypes = [POINTER(ustring_list)]
ustrlist_clear.__doc__ = \
"""gboolean ustrlist_clear(ustring_list * in_ul)
../../../rregadmin/util/ustring_list.h:78"""
# ../../../rregadmin/util/ustring_list.h 84
ustrlist_size = _libraries['librregadmin.so.1'].ustrlist_size
ustrlist_size.restype = c_int
# ustrlist_size(in_ul)
ustrlist_size.argtypes = [POINTER(ustring_list)]
ustrlist_size.__doc__ = \
"""int ustrlist_size(unknown * in_ul)
../../../rregadmin/util/ustring_list.h:84"""
# ../../../rregadmin/util/ustring_list.h 93
ustrlist_get = _libraries['librregadmin.so.1'].ustrlist_get
ustrlist_get.restype = POINTER(ustring)
# ustrlist_get(in_ul, in_index)
ustrlist_get.argtypes = [POINTER(ustring_list), c_int]
ustrlist_get.__doc__ = \
"""unknown * ustrlist_get(unknown * in_ul, int in_index)
../../../rregadmin/util/ustring_list.h:93"""
# ../../../rregadmin/util/ustring_list.h 99
ustrlist_append = _libraries['librregadmin.so.1'].ustrlist_append
ustrlist_append.restype = gboolean
# ustrlist_append(in_ul, in_str)
ustrlist_append.argtypes = [POINTER(ustring_list), POINTER(ustring)]
ustrlist_append.__doc__ = \
"""gboolean ustrlist_append(ustring_list * in_ul, ustring * in_str)
../../../rregadmin/util/ustring_list.h:99"""
# ../../../rregadmin/util/ustring_list.h 106
ustrlist_equal = _libraries['librregadmin.so.1'].ustrlist_equal
ustrlist_equal.restype = gboolean
# ustrlist_equal(in_ul1, in_ul2)
ustrlist_equal.argtypes = [POINTER(ustring_list), POINTER(ustring_list)]
ustrlist_equal.__doc__ = \
"""gboolean ustrlist_equal(unknown * in_ul1, unknown * in_ul2)
../../../rregadmin/util/ustring_list.h:106"""
# ../../../rregadmin/util/ustring_list.h 113
ustrlist_compare = _libraries['librregadmin.so.1'].ustrlist_compare
ustrlist_compare.restype = c_int
# ustrlist_compare(in_ul1, in_ul2)
ustrlist_compare.argtypes = [POINTER(ustring_list), POINTER(ustring_list)]
ustrlist_compare.__doc__ = \
"""int ustrlist_compare(unknown * in_ul1, unknown * in_ul2)
../../../rregadmin/util/ustring_list.h:113"""
# ../../../rregadmin/util/ustring_list.h 121
ustrlist_allocated_count = _libraries['librregadmin.so.1'].ustrlist_allocated_count
ustrlist_allocated_count.restype = c_int
# ustrlist_allocated_count()
ustrlist_allocated_count.argtypes = []
ustrlist_allocated_count.__doc__ = \
"""int ustrlist_allocated_count()
../../../rregadmin/util/ustring_list.h:121"""
# ../../../rregadmin/util/ustring_list.h 129
ustrlist_debug_print = _libraries['librregadmin.so.1'].ustrlist_debug_print
ustrlist_debug_print.restype = None
# ustrlist_debug_print(in_ul)
ustrlist_debug_print.argtypes = [POINTER(ustring_list)]
ustrlist_debug_print.__doc__ = \
"""void ustrlist_debug_print(unknown * in_ul)
../../../rregadmin/util/ustring_list.h:129"""
__all__ = ['ustrlist_new_list', 'ustrlist_compare', 'ustrlist_equal',
           'ustrlist_get', 'ustring_list_', 'ustrlist_clear',
           'ustrlist_new', 'ustrlist_append', 'ustrlist_is_valid',
           'ustrlist_copy', 'ustring_list', 'ustrlist_size',
           'ustrlist_free', 'ustrlist_allocated_count',
           'ustrlist_debug_print']
